google maps marker hinzugefügt

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="main" class="col-lg-offset-1 col-lg-7 col-md-12 col-sm-12">
 
 
-          <section id="rundgang" class="introduction">
+          <section id="rundgang">
             <article>
               <h1>Rundgang Armgartstraße<br><span lang="en">Department Design</span> HAW Hamburg</h1>
               <p>Vom 26. bis zum 28. Januar 2017 präsentiert der Campus Armgartstraße seine Jahresausstellung in einem Haus voller Exponate, mit Performances, einer Modenschau und einem Symposion. Aus den Bereichen Kunst, Design und Wissenschaft referieren und diskutieren Gäste aus Jakarta, Brüssel, Stockholm, Zürich, München und Hamburg zum Thema des Symposions Forschung gestalten – Designforschung.</p>
