--- a/index.html
+++ b/index.html
@@ -668,8 +668,10 @@
             <div class="col-lg-offset-1 col-lg-11 col-md-12 col-sm-12">
               <h2>Adresse</h2>
               <p>Hochschule für Angewandte Wissenschaften<br>
-              Kunst- und Mediencampus Hamburg<br>
-              Finkenau 35, 22081 Hamburg</p>
+                Department Design<br>
+                Campus Armgartstraße<br>
+                Armgartstraße 24, 22087 Hamburg
+              </p>
               <a href="https://www.google.com/maps/place/Hochschule+f%C3%BCr+angewandte+Wissenschaften+Hamburg+Modecampus+Armgartstra%C3%9Fe+(HAW+Hamburg)/@53.5649911,10.0224288,18z/data=!4m12!1m6!3m5!1s0x47b18ec9a2e09f5f:0x2f81ff129b66ef0b!2sHAW+Hamburg,+Department+Medientechnik!8m2!3d53.5689973!4d10.0339355!3m4!1s0x0:0x25341918829e5ab!8m2!3d53.5651147!4d10.0224086">auf Google Maps ansehen</a>
               <div id="map"></div>
             </div>
