--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="dist/css/main.min.css" media="none" onload="if(media!='all')media='all'">
     <noscript><link rel="stylesheet" href="dist/css/main.min.css"></noscript>
 
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+
+
     <link rel="shortcut icon" href="dist/img/favicon.ico">
     <link rel="icon" type="dist/img/" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="dist/img/" href="favicon-16x16.png" sizes="16x16" />
@@ -46,6 +49,17 @@
             <article class="col-lg-offset-1 col-lg-11 col-md-12 col-sm-12">
               <h1>Rundgang Armgartstraße<br><span lang="en">Department Design</span> HAW Hamburg</h1>
               <p>Vom 26. bis zum 28. Januar 2017 präsentiert der Campus Armgartstraße seine Jahresausstellung in einem Haus voller Exponate, mit Performances, einer Modenschau und einem Symposion. Aus den Bereichen Kunst, Design und Wissenschaft referieren und diskutieren Gäste aus Jakarta, Brüssel, Stockholm, Zürich, München und Hamburg zum Thema des Symposions Forschung gestalten – Designforschung.</p>
+            </article>
+            <article class="col-lg-offset-1 col-lg-11 col-md-12 col-sm-12">
+              <h2>Das war der Rundgang 2016</h2>
+              <p>Danke an alle Menschen, die das möglich gemacht haben.</p>
+              <div class="slider">
+                <div><img data-lazy="dist/img/slider/rundgang-1.jpg" src="http://placehold.it/1000x563"></div>
+                <div><img data-lazy="dist/img/slider/rundgang-2.jpg" src="http://placehold.it/1000x563"></div>
+                <div><img data-lazy="dist/img/slider/rundgang-3.jpg" src="http://placehold.it/1000x563"></div>
+                <div><img data-lazy="dist/img/slider/rundgang-4.jpg" src="http://placehold.it/1000x563"></div>
+                <div><img data-lazy="dist/img/slider/rundgang-5.jpg" src="http://placehold.it/1000x563"></div>
+              </div>
             </article>
           </section>
 
@@ -694,6 +708,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNdq3G-7ZK3ljSfZviDs-22Jf5Di-xs14&signed_in=true"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script src="dist/scripts/main.js"></script>
     <script type="text/javascript">
       (function($) {
