--- a/index.html
+++ b/index.html
@@ -48,17 +48,96 @@
           <section id="rundgang" class="row">
             <article class="col-lg-offset-1 col-lg-11 col-md-12 col-sm-12">
               <h1>Rundgang Armgartstraße<br><span lang="en">Department Design</span> HAW Hamburg</h1>
-              <p>Vom 26. bis zum 28. Januar 2017 präsentiert der Campus Armgartstraße seine Jahresausstellung in einem Haus voller Exponate, mit Performances, einer Modenschau und einem Symposion. Aus den Bereichen Kunst, Design und Wissenschaft referieren und diskutieren Gäste aus Jakarta, Brüssel, Stockholm, Zürich, München und Hamburg zum Thema des Symposions Forschung gestalten – Designforschung.</p>
+              <p>Vom 26. bis zum 28. Januar 2017 präsentierte der Campus Armgartstraße seine Jahresausstellung in einem Haus voller Exponate, mit Performances, einer Modenschau und einem Symposion. Aus den Bereichen Kunst, Design und Wissenschaft referierten und diskutierten Gäste aus Jakarta, Brüssel, Stockholm, Zürich, München und Hamburg zum Thema des Symposions Forschung gestalten – Designforschung.</p>
             </article>
             <article class="col-lg-offset-1 col-lg-11 col-md-12 col-sm-12">
-              <h2>Das war der Rundgang 2016</h2>
-              <p>Danke an alle Menschen, die das möglich gemacht haben.</p>
               <div class="slider">
-                <div><img data-lazy="dist/img/slider/rundgang-1.jpg" src="http://placehold.it/1000x563"></div>
-                <div><img data-lazy="dist/img/slider/rundgang-2.jpg" src="http://placehold.it/1000x563"></div>
-                <div><img data-lazy="dist/img/slider/rundgang-3.jpg" src="http://placehold.it/1000x563"></div>
-                <div><img data-lazy="dist/img/slider/rundgang-4.jpg" src="http://placehold.it/1000x563"></div>
-                <div><img data-lazy="dist/img/slider/rundgang-5.jpg" src="http://placehold.it/1000x563"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-1.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-2.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-3.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-4.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-5.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-6.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-7.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-8.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-9.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-10.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-11.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-12.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-13.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-14.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-15.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-16.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-17.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-18.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-19.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-20.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-21.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-22.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-23.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-24.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-25.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-26.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-27.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-28.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-29.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-30.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-31.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-32.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-33.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-34.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-35.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-36.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-37.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-38.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-39.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-40.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-41.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-42.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-43.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-44.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-45.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-46.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-47.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-48.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-49.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-50.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-51.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-52.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-53.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-54.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-55.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-56.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-57.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-58.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-59.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-60.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-61.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-62.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-63.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-64.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-65.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-66.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-67.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-68.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-69.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-70.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-71.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-72.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-73.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-74.jpg" src="dist/img/slider/placeholder.png"></div>
+                <div class="picture"><img class="img-responsive" data-lazy="dist/img/slider/rundgang-75.jpg" src="dist/img/slider/placeholder.png"></div>
+              </div>
+              <div class="controlls row">
+                <div class="col-lg-2 col-md-2 col-sm-4">
+                  <button class='slick-prev slick-arrow' role='button' aria-label='zurück'>zurück</button>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-4">
+                  <p class="text-center"><span id="pagination"></span></p>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-4">
+                  <button class='slick-next slick-arrow pull-right' role='button' aria-label='vor'>vor</button>
+                </div>
               </div>
             </article>
           </section>
